# molgang

./: .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  ECONOMY.md  README.md  SECURITY.md  fly.toml  githfield.yml  install.sh  pyproject.toml  render.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  pages.yml
bridge/: ingest.py  sample_roblox_votes.json  server.py  snapshot.py  state.py  sync.py
data/: molecules-3d.json
data/chemistry/: multilingual_terms.json
docs/: API.md  ARCHITECTURE.md  ASSET-STORAGE-BUDGET.md  BUDGETS.md  COMPLIANCE.md  COST_MODEL.md  CURRICULUM.md  DESIGN_BAR.md  FEATURES.md  MEASUREMENT.md  MIRRORING.md  MULTILINGUAL.md  PLAN_SERVERLESS_TOP10.md  PLAN_SERVERLESS_TOP10_verdicts.md  QUEST_3_MANUAL.html  QUEST_3_MANUAL.md  RECOVERY.md  ROADMAP_1M.html  TOKENOMICS.md
docs/launch/: COST_MODEL.md  MEASUREMENT_STANDARD.md  RUNBOOK.md
examples/: p2p_demo.py  play_demo.py
molgang_web/: manage.py  requirements.txt
molgang_web/bar/: apps.py  consumers.py  engine.py  events.py  routing.py  serializers.py  (+3 more)
monitoring/: README.md  alerts.yml  docker-compose.yml  molgang-alerts.yml  prometheus.example.yml  prometheus.yml
php/: .gitignore  PORTCHECK.md  README.md  config.example.php  cron_digest.php  desktop_bridge.py  node_registry.sql  schema.sql
roblox/: Chemistry.lua  Game.lua  README.md  Sync.lua  VoteExport.lua
scripts/: build_roadmap_snapshot.sh  check_translations.py  weave_multilingual_terms.py
serverless/: README.md  build_engine.py
site/: index.html  roadmap.js  style.css
tests/: conftest.py  test_3d_graph_static.py  test_accessibility.py  test_achievements.py  test_api_version_contract.py  test_bar_spirals.py  test_bots_honest_verdict.py  test_bridge.py  test_bridge_server_guards.py  test_certificate.py  test_certificate_public_copy.py  test_chemistry_lua_mirror.py  test_chemistry_mirror_parity.py  test_client_websocket.py  test_compliance.py  test_content_translation_gate.py  test_curriculum.py  test_curriculum_doc.py  test_curriculum_seed.py  test_desktop_bridge_config.py  test_device.py  test_economy_doc.py  test_engine_compat.py  test_explorer.py  test_facts.py  test_faucet_decay.py  test_features.py  test_fleet.py  test_geometry.py  test_graph.py  test_ground_truth_totality.py  test_i18n_chrome.py  test_integer_completion_gates.py  test_lab_samples.py  test_launch_docs.py  test_level_silk.py  test_load_ramp_helpers.py  test_merge.py  test_mobile_responsive.py  test_moderation.py  (+42 more)
tools/: build_geometry.py
web/: .htaccess  app.js  config.js  dashboard.html  gfx-capability.js  i18n.js  index.html  knitweb-graph-3d.html  lab-3d.html  lab-analyze.html  lab-immersive.html  learn.html  manifest.webmanifest  style.css  sw.js
(+108 files in other folders)
