[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molgang"
version = "0.1.0"
description = "MOLGANG — a peer-to-peer chemistry (scheikunde) learning game on the Knitweb: bonds are Knits, molecules are Fibers, peers validate with pulses."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "febuz", email = "develuse@gmail.com" }]
keywords = ["chemistry", "scheikunde", "education", "game", "p2p", "knitweb", "depin", "roblox"]

# MOLGANG runs on the knitweb package (github.com/knitweb/pulse). It is not yet on PyPI;
# for local dev install it editable:  pip install -e /path/to/pulse   (or set PYTHONPATH).
dependencies = [
    "knitweb>=0.6,<0.7",
    "networkx>=3",   # explore the woven graph (hubs, neighbours, shortest path)
    "fpdf2>=2.8",    # pure-Python PDF engine for PoUW certificates (no native deps)
]

[project.urls]
Homepage = "https://github.com/knitweb/molgang"
Repository = "https://github.com/knitweb/molgang"

[project.scripts]
molgang = "molgang.cli:main"

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pypdf>=6.13.3"]   # pypdf: assert the certificate PDF text layer in tests

[tool.hatch.build.targets.wheel]
packages = ["src/molgang"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
